feat: GET and PUT for subscriber
